# obsidian-blog

./: .gitignore  README.md  main.py  pyproject.toml  spec.md
stub_vault/: hello-world.md  invalid-date.md  private-note.md  untitled-no-heading.md  with-frontmatter.md
stub_vault/nested/: deep-note.md  malformed-frontmatter.md
tests/: test_main.py
